[package]
name = "rs-spotify-lyrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.13.2", features = ["cli", "env-file"] }
tokio = { version = "1.38.0", features = ["full"] }

ureq = { version = "2.9.7", features = ["json"] }
serde_json = "1.0.117"
url = "2.5.1"